--- a/assignment_09.html
+++ b/assignment_09.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
     <meta charset="UTF-8">
     <title>assignment_09</title>
+
+    <style>
+
+        *,
+        *::before,
+        *::after {
+            margin: 0;
+        }
+
+
+        body {
+
+            display: flex;
+            justify-content: center;
+        }
+
+
+
+        div {
+            width: 200px;
+            height: 50px;
+            border: 1px solid black;
+        }
+
+        section {
+            display: flex;
+            flex-direction: row;
+            margin-top: 300px;
+
+        }
+
+
+
+
+    </style>
+
+
+
+
 </head>
 <body>
+
+<section>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
+
 
 </body>
 </html>
